tdf#120565: Fix scale bug in Bitmap Area dialog

Change-Id: Id8886b7972e707698b539ad5787a26d6a64198ca
Reviewed-on: https://gerrit.libreoffice.org/65771
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
Tested-by: Tamás Zolnai <tamas.zolnai@collabora.com>